add some seo stuff

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,18 @@
 <body>
   <!-- React app -->
   <div id="libe-labo-app-root"></div>
+  <div id="stuff-for-seo" style="display: flex; flex-direction: column; align-items: center; max-width: 62rem; margin: 0 auto; padding: 0 1rem;">
+    <div style="margin-bottom: 1rem; text-align: center;">
+      <div class="lblb-block-title lblb-block-title_small"><h4>Retrouvez tous nos dossiers thématiques</h4></div>
+      <!-- <p class="block-title"><b>Retrouvez tous nos dossiers thématiques</b></p> -->
+    </div>
+    <div style="display: flex; justify-content: space-around; width: 100%; margin-bottom: 3rem;">
+      <p class="lblb-paragraph lblb-paragraph_small"><a target='_blank' href='https://www.liberation.fr/elections-municipales-2020-Paris,101166'>Paris</a></p>
+      <p class="lblb-paragraph lblb-paragraph_small"><a target='_blank' href='https://www.liberation.fr/elections-municipales-2020-Marseille,101167'>Marseille</a></p>
+      <p class="lblb-paragraph lblb-paragraph_small"><a target='_blank' href='https://www.liberation.fr/elections-municipales-2020-gauche,101169'>Gauche</a></p>
+      <p class="lblb-paragraph lblb-paragraph_small"><a target='_blank' href='https://www.liberation.fr/municipales-2020-LREM,101170'>LREM</a></p>
+    </div>
+  </div>
   <!-- Scripts -->
   <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
   <noscript><img width="1" height="1" src="https://logliberation.xiti.com/hit.xiti?s=507510&amp;s2=56&amp;p=LibeLabo::&amp;di=&amp;" ></noscript>
