add seo stuff and subscribers logic

--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,20 @@
 </head>
 <body>
   <!-- React app -->
+  <div id="temp-header">
+    <div class="home-municipales__header">
+      <div class="home-municipales__header-logo">
+        <img src='./logo.svg' />
+      </div>
+      <div class="home-municipales__header-filters">
+        <div class="home-municipales__header-filters-title">
+          <div class="lblb-page-title"><h1>À la une des municipales</h1></div>
+        </div>
+      </div>
+    </div>
+  </div>
   <div id="libe-labo-app-root"></div>
-  <div id="stuff-for-seo" style="display: flex; flex-direction: column; align-items: center; max-width: 62rem; margin: 0 auto; padding: 0 1rem;">
+  <div id="temp-footer" style="display: flex; flex-direction: column; align-items: center; max-width: 62rem; margin: 0 auto; padding: 0 1rem;">
     <div style="margin-bottom: 1rem; text-align: center;">
       <div class="lblb-block-title lblb-block-title_small"><h4>Retrouvez tous nos dossiers thématiques</h4></div>
       <!-- <p class="block-title"><b>Retrouvez tous nos dossiers thématiques</b></p> -->
