updates for the fil-vert version

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
     </div>
   </div>
   <div id="libe-labo-app-root"></div>
-  <div id="temp-footer" style="display: flex; flex-direction: column; align-items: center; max-width: 62rem; margin: 0 auto; padding: 0 1rem;">
+  <div id="temp-footer" style="display: none; flex-direction: column; align-items: center; max-width: 62rem; margin: 0 auto; padding: 0 1rem;">
     <div style="margin-bottom: 1rem; text-align: center;">
       <div class="lblb-block-title lblb-block-title_small"><h4>Retrouvez tous nos dossiers thématiques</h4></div>
       <!-- <p class="block-title"><b>Retrouvez tous nos dossiers thématiques</b></p> -->
